# chess-simulator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  game
shader/: f_chess.glsl  f_colored.glsl  f_constant.glsl  f_lambert.glsl  f_lamberttextured.glsl  f_simplest.glsl  f_textured.glsl  fragment-shader.glsl  v_chess.glsl  v_colored.glsl  v_constant.glsl  v_lambert.glsl  v_lamberttextured.glsl  v_simplest.glsl  v_textured.glsl  vertex-shader.glsl
src/: Board.h  Figures.cpp  Figures.h  OBJ_Loader.h  Program.cpp  Program.h  ShaderProgram.cpp  ShaderProgram.h  Tile.h  main.cpp  moves.txt  myCube.h  myTeapot.h
